@@ -1143,6 +1143,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7066: archive_util.make_archive now restores the cwd if an error is 
+  raised. Initial patch by Ezio Melotti.
+
 - Issue #6516: Added owner/group support when creating tar archives in
   Distutils.
 
